# saxo-api-client

./: CHANGELOG.md  MANIFEST.in  README.ja.md  README.md  pyproject.toml  setup.py
.ai/: measurement_guide.md  metrics_report.json
docs/: MIGRATION.md  README.md  authentication.md  quickstart.md
docs/api/: README.md
docs/contrib/: client.md  option_trader.md  orders.md  trader.md  utilities.md  websocket.md
docs/examples/: cancel_orders.md  check_balance.md  close_position.md  delta_hedging_workflow.md  margin_monitoring.md  monitor_positions.md  place_limit_order.md  place_market_order.md  search_instruments.md  websocket_streaming.md
docs/schemas/: README.md
docs/templates/: api_template.md  example_template.md
samples/: README.md  verify_api_breaking_changes.py  verify_cycle_trading_full.py  verify_diagnostics_perf.py  verify_history_account.py  verify_lifecycle_trading.py  verify_monitor_account.py  verify_orders_live.py  verify_orders_precheck.py  verify_portfolio_fx.py  verify_refdata_details.py  verify_refdata_fx.py  verify_scenario_options_cfd.py  verify_session_diag.py  verify_trace_offline.py
saxo_api_client/: __init__.py  client.py
saxo_api_client/agent/: GUIDE.md  __init__.py  __main__.py  cli.py
saxo_api_client/auth/: __init__.py  client.py  models.py  redirect_server.py  (+1 more)
saxo_openapi/: __init__.py  saxo_openapi.py  trace.py
tests/: test_agent_guide.py  test_contrib_orders_type_safety.py  test_contrib_utils_type_safety.py  test_documentation_examples.py  test_endpoint_type_safety.py  test_gap_analysis_updates.py  test_isforceopen_toopen_mandatory.py  test_position_open_close.py  test_trace.py
(+84 files in other folders)
