[project]
name = "saxo-api-client"
version = "1.0.0"
description = "AI-ready Saxo Bank OpenAPI REST/WebSocket client (Python 3.13+)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "nohikomiso" }]
keywords = [
  "saxo",
  "saxo-bank",
  "saxobank",
  "openapi",
  "trading",
  "api-client",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests",
  "Flask",
  "pydantic>=2.0",
  "httpx",
  "websockets",
  "loguru",
]

[project.urls]
Homepage = "https://github.com/nohikomiso/saxo-api-client"
Repository = "https://github.com/nohikomiso/saxo-api-client"
Issues = "https://github.com/nohikomiso/saxo-api-client/issues"
Changelog = "https://github.com/nohikomiso/saxo-api-client/blob/master/CHANGELOG.md"

[project.scripts]
saxo-api-client = "saxo_api_client.agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saxo_api_client"]

[tool.hatch.build.targets.wheel.force-include]
"saxo_api_client/agent/GUIDE.md" = "saxo_api_client/agent/GUIDE.md"

[tool.hatch.build.targets.sdist]
include = [
  "saxo_api_client",
  "README.md",
  "README.ja.md",
  "LICENSE",
  "CHANGELOG.md",
]
[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
